WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144052
[Mac] In nightlies and local builds, WebKit services can get terminated under memory pressure
https://bugs.webkit.org/show_bug.cgi?id=144052
Summary
[Mac] In nightlies and local builds, WebKit services can get terminated under...
Alexey Proskuryakov
Reported
2015-04-22 11:04:15 PDT
In nightlies and local builds, WebKit services can get terminated under memory pressure. That's not the intended behavior.
rdar://problem/19754404
Attachments
proposed fix
(1.56 KB, patch)
2015-04-22 11:06 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-04-22 11:06:24 PDT
Created
attachment 251338
[details]
proposed fix
WebKit Commit Bot
Comment 2
2015-04-22 12:03:28 PDT
Comment on
attachment 251338
[details]
proposed fix Clearing flags on attachment: 251338 Committed
r183121
: <
http://trac.webkit.org/changeset/183121
>
WebKit Commit Bot
Comment 3
2015-04-22 12:03:32 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4
2015-04-22 13:38:30 PDT
Build fix in
r183126
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug