[Mac] In nightlies and local builds, WebKit services can get terminated under memory pressure https://bugs.webkit.org/show_bug.cgi?id=144052 rdar://problem/19754404

Reviewed by Darin Adler.

* Shared/EntryPointUtilities/mac/XPCService/XPCServiceMain.Development.mm:
(main): Make XPC transaction tracking work again after a re-exec.


Canonical link: https://commits.webkit.org/162018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183121 268f45cc-cd09-0410-ab3c-d52691b4dbfc